--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,6 +94,7 @@
         android:fontFamily="sans-serif"
         android:textColorHighlight="@color/yellow"
         android:textColorHint="#3d3d3d"
+        android:focusable="false"
         app:layout_constraintEnd_toEndOf="@+id/no_of_members"
         app:layout_constraintStart_toStartOf="@+id/no_of_members"
         app:layout_constraintTop_toBottomOf="@+id/no_of_members" />
